# langchain-local-template

./: .gitignore  .zsh_history  .zshrc  Pipfile  README.md  pyproject.toml  requirements.txt
config/: models.yaml  models_ollama_synced.yaml  providers.yaml
env-setup/: format.sh  setup-all.sh  setup-langchain-project.sh  setup-langchain-simple.sh  setup-langchain.sh  setup-mac-python-env.sh  setup-python.sh
notes/: working-notes.md
src/: test-chat.py
src/langchain_local.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/models/: configs.py  factory.py  providers.py
src/utils/: sync_models.py
tests/: langchain-tests.py
